2015-01-12 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c,mod_rivet_common.c,rivet_[prefork|worker]_bridge.c: fixed
    various bugs with separate channel handling
    * tests/channel.test,channel.tcl: adding test for SeparateChannels 

2015-01-11 Massimo Manghi <mxmanghi@apache.org>
    * tests/redirect.test,redirect.rvt: adding test for command ::rivet::redirect

2015-01-08 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivetInspect.c: add SeparateChannels directive introspection
    * doc/xml/command.xml,directives.xml: add explanation of new command
    ::rivet::redirect and new directive SeparateChannel

2015-01-06 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/mod_rivet.c: handling separate_channels flag for virtual host
    private Rivet Channels
    * src/experimental/mod_rivet_common.c: new function Rivet_CreateRivetChannel
    * src/experimental/apache_config.c: Conf directive SeparateChannels
    * src/experimental/rivet_worker_mpm.c,rivet_prefork_mpm.c: Channel creation code
    moved to mod_rivet_common.c
    * configure.ac: apache utils configuration split from APR configuration
    * Makefile.am: new symbols APU_INCLUDES and APU_LDFLAGS

2014-12-21 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/redirect.tcl: passing a meaningful dictionary as error descriptor
    * src/experimental/rivetCore.c: supporting also method 'get'
    * src/experimental/Tclwebapache.c: new function TclWeb_OutputHeader[Get|Set] to
    explicitly suggesting they are accessing the output headers

2014-12-17 Massimo Manghi <mxmanghi@apache.org>
    * src/experimental/rivetCore.c: new 'headers sent' introspection command to
    understand whether headers have been sent already
    * rivet/rivet-tcl/redirect.tcl: command didn't fail with a meaningful message
    if headers had been sent already because of ::rivet::no_body that blocks output
    to the socket. The procedure now returns an error if ::rivet::headers sent 