@@ -65,7 +65,7 @@ Rivet_CreateRivetChannel(apr_pool_t* pPool, apr_threadkey_t* rivet_thread_key)
 {
     Tcl_Channel* outchannel;
 
-    outchannel = apr_pcalloc (pPool, sizeof(Tcl_Channel));
+    outchannel  = apr_pcalloc (pPool, sizeof(Tcl_Channel));
     *outchannel = Tcl_CreateChannel(&RivetChan, "apacheout", rivet_thread_key, TCL_WRITABLE);
 
     /* The channel we have just created replaces Tcl's stdout */
