@@ -1,3 +1,7 @@
+2015-01-13 Massimo Manghi <mxmanghi@apache.org>
+    * src/experimental/mod_rivet.c,mod_rivet_common.c: improved some comments
+    * rivet_worker_bridge.c: fixed channel wrong handling 
+
 2015-01-12 Massimo Manghi <mxmanghi@apache.org>
     * src/experimental/mod_rivet.c,mod_rivet_common.c,rivet_[prefork|worker]_bridge.c: fixed
     various bugs with separate channel handling
